Change Log for OpenXava project
===============================

- MetaComponent has a new boolean property called metaDataCached, to determine if the metadata is cached for that component.

OpenXava 5.6 (2016-10-28)
-------------------------
- List remembers filters and ordering done by user to be re-executed choosing from a combo, you can rename the filter/ordering configurations produced.
- New DISCUSSION stereotype to include a discussion thread as a property of an entity.
- New SIMPLE_HTML_TEXT stereotype to edit rich text with a simplified user interface.
- CKEditor look & feel adapted to NaviOX and Liferay 6.1 look & feels.
- CKEditor upgraded to 4.5.9.
- Partial query from FROM allowed in @Tab(baseCondition=) of JPA entities and base-condition of XML components.
- New indexExt.jsp in naviox/web to add elements to the main HTML page that wraps the application.
- 'My reports' action is no longer available by default, though it is still in OpenXava.
- New TypicalExtendedPrint controller that includes 'My report' action.
- The combination XML components + JPA persistence no longer supported. 
- Main window is not refreshed when generating a SimpleHTMLReport.
- New helpAvailable property in xava.properties to enable/disable the help icon in modules.
- Eclipse workspace in distribution upgraded to Eclipse Neon, though it still works with all 4.x versions.
- MetaController.containsMetaAction() receives a not qualified action name as argument.
- New method validateViewValues() in ViewBaseAction.
- New WithRequiredLongName class for using as generic transient class for dialogs.
- New method move() in XArrays utility class.
- New booleanWithSuffixEditor.jsp editor that allows put a suffix label after the field checkbox.
- Some new common use labels to be used in applications.
- New toString(Object [] array) method in Strings utility class.
- ModuleTestBase.setLocale() no longer reset the module.